# my-example-dash-app

./: LICENSE  README.md  app.py  functions.py  pyproject.toml
assets/: dark.css  light.css
